@@ -27,7 +27,15 @@
 #define STACK_MAGIC 0
 #define REGS_TO_SAVE /*"r1", "r2", "r3", "r4",*/ "r5", "r6", "fp", "ip", "lr"
 
-static int
+/*
+ * You may want to make the function static enable optimizations.
+ * However, the ABI SPEC does not apply to static functions. Therefore
+ * I make slp_switch a regular global function.
+ */
+#if 0
+static
+#endif
+int
 slp_switch(void)
 {
     register int *stackref, stsizediff;
@@ -44,7 +52,6 @@ slp_switch(void)
         SLP_RESTORE_STATE();
         return 0;
     }
-    __asm__ volatile ("" : : : REGS_TO_SAVE);
 }
 
 #endif
