@@ -19,7 +19,16 @@
 #define REGS_TO_SAVE "$16", "$17", "$18", "$19", "$20", "$21", "$22", \
        "$23", "$30"
 #endif
-static int
+    __asm__ volatile ("" : : : REGS_TO_SAVE);
+/*
+ * You may want to make the function static enable optimizations.
+ * However, the ABI SPEC does not apply to static functions. Therefore
+ * I make slp_switch a regular global function.
+ */
+#if 0
+static
+#endif
+int
 slp_switch(void)
 {
     register int *stackref, stsizediff;
@@ -38,7 +47,6 @@ slp_switch(void)
             );
         SLP_RESTORE_STATE();
     }
-    /* __asm__ __volatile__ ("" : : : REGS_TO_SAVE); */
     return 0;
 }
 
