@@ -42,7 +42,15 @@
        "cr2", "cr3", "cr4"
 #endif
 
-static int
+/*
+ * You may want to make the function static enable optimizations.
+ * However, the ABI SPEC does not apply to static functions. Therefore
+ * I make slp_switch a regular global function.
+ */
+#if 0
+static
+#endif
+int
 slp_switch(void)
 {
     static int x = 0;
