@@ -23,7 +23,15 @@
 
 #define STACK_MAGIC 0
 
-static int
+/*
+ * You may want to make the function static enable optimizations.
+ * However, the ABI SPEC does not apply to static functions. Therefore
+ * I make slp_switch a regular global function.
+ */
+#if 0
+static
+#endif
+int
 slp_switch(void)
 {
     register int *stackref, stsizediff;
